stylesheets/style.css
/* ... */
form table tr td {
	text-align: left;
	margin: 0;
	padding: 0;
}
form[name="post"] input[name="submit"] {
	margin-left: 2px;
}
table.banlist tr td {
	padding: 2px;
}
form table tr th {
	text-align: left;
	padding: 4px;
	background: #98E;
}
.unimportant, .unimportant * {
	font-size: 10px;
}
.fileinfo {
	font-size: 12px;
	margin: 0;
	padding-right: 7em;
}
div.banner {
	background-color: #E04000;
	font-size: 12pt;
	font-weight: bold;
	text-align: center;
	margin: 1em 0;
}
div.banner, div.banner a {
	color: white;
}
div.banner a:hover {
	color: #EEF2FF;
	text-decoration: none;
}
img.banner {
	display: block;
	border: 1px solid #a9a9a9;
	margin: 12px auto 0 auto;
	max-width: 95%;
}
img.postimg {
	display: block;
	float: left;
	margin: 5px 20px 0 0;
	padding: 5px;
	border: none;
}
div.post img.icon {
	margin: 0 5px;
}
img.loading {
	opacity: 0.4;
	filter: alpha(opacity=40);
}
img.expanded {
	width: auto !important;
	height: auto !important;
	max-width: 95%;
	max-height: 95%;
}
.opMain {
	margin-right: 20px;
	margin-bottom: 5px;
}
.thread hr {
	border-color: #D9BFB7;
}
p.intro {
	margin: 0.5em 0;
	padding: 0;
	padding-bottom: 0.2em;
}
input.delete {
	float: left;
	margin: 1px 6px 0 0;
}
p.intro span.subject {
	color: #0F0C5D;
	font-weight: bold;
	font-size: 125%;
}
p.intro span.name {
	color: #117743;
	font-weight: bold;
}
p.intro span.capcode, p.intro a.capcode, p.intro a.nametag {
	color: #F00000;
	margin-left: 0;
}
p.intro .mentioned a {
	margin-left: 2px;
}
.threadviewlink {
	margin-left: 8px;
}
div.delete {
	float: right;
}
.body {
	margin-left: 1.5em;
}
div.post.reply .body {
	margin-left: 1.8em;
	margin-right: 0;
	margin-top: 0.8em;
	margin-bottom: 0;
	padding-right: 3em;
	padding-bottom: 0.3em;
}
div.post.reply.highlighted {
	background: #D6BAD0;
}
a.postlink {
	word-wrap: normal;
	white-space: nowrap;
}
a.bodylink {
	color: #D00;
}
div.post {
	max-width: 97%;
}
div.post .body {
	word-wrap: break-word;
	white-space: pre-wrap;
}
div.post.reply {
	background: #D6DAF0;
	margin: 2px 16px 2px 20px;
	padding: 0.2em 0.3em 0.5em 0.6em;
	border-width: 1px;
	border-style: none solid solid none;
	border-color: #B7C5D9;
	display: inline-block;
}
span.trip {
	color: #228854;
}
span.quote {
	color: #789922;
}
span.omitted {
	display: block;
	margin-top: 1em;
}
br.clear {
	clear: left;
	display: block;
}
span.controls {
	float: right;
	margin: 0;
	padding: 0;
	font-size: 80%;
}
span.controls.op {
	float: none;
	margin-left: 10px;
}
span.controls a {
	margin: 0;
}
div#wrap {
	width: 900px;
	margin:0 auto;
}
div.ban {
	background: white;
	border: 1px solid #98E;
	max-width: 700px;
	margin: 30px auto;
	overflow: auto;
}
div.ban p, div.ban h2 {
	padding: 3px 7px;
}
div.ban h2 {
	background: #98E;
	color: black;
	font-size: 12pt;
	margin: 0;
}
div.ban p {
	font-size: 12px;
	margin-bottom: 12px;
}
div.ban p.reason {
	font-weight: bold;
}
span.heading {
	color: #AF0A0F;
	font-size: 11pt;
	font-weight: bold;
}
.spoiler {
	background: black;
	color: black;
	padding: 0px 1px;
}
div.post .body .spoiler a {
	color: black;
}
.spoiler:hover, div.post .body .spoiler:hover a, .spoiler-force-color {
	color: white !important;
}
.hidetogglebutton {
	width: 4em;
}
.hidetext {
	border-style: solid;
	border-width: 1px;
	border-color: #ccc;
	padding: 5px;
	background: #ddd;
	clear: both;
	margin: 5px;
}
.hidetext.off {
	height: 0;
	padding: 0;
	overflow: hidden;
}
.comicsans {
	font-family: comic sans, comic sans ms;
}
div.styles {
	float: right;
	padding-bottom: 20px;
}
div.styles a {
	margin: 0 10px;
}
div.styles a.selected {
	text-decoration: none;
}
table.test {
	width: 100%;
}
table.test td, table.test th {
	text-align: left;
	padding: 5px;
}
table.test tr.h th {
	background: #98E;
}
table.test td img {
	margin: 0;
}
fieldset label {
	display: block;
}
div.pages {
	color: #89A;
	background: #D6DAF0;
	display: inline;
	padding: 8px;
	border-right: 1px solid #B7C5D9;
	border-bottom: 1px solid #B7C5D9;
}
div.pages a.selected {
	color: black;
	font-weight: bolder;
}
div.pages a {
	text-decoration: none;
}
div.pages form {
	margin: 0;
	padding: 0;
	display: inline;
}
div.pages form input {
	margin: 0 5px;
	display: inline;
}
hr {
	border: none;
	border-top: 1px solid #B7C5D9;
	height: 0;
	clear: left;
}
.boardlist {
	color: #89A;
	font-size: 9pt;
	margin-top: 3px;
}
.boardlist.bottom {
	margin-top: 20px;
}
.boardlist a {
	text-decoration: none;
}
div.report {
	color: #333;
}
table.modlog {
	margin: auto;
	width: 100%;
}
table.modlog tr td {
	text-align: left;
	margin: 0;
	padding: 4px 15px 0 0;
}
table.modlog tr th {
	text-align: left;
	padding: 4px 15px 5px 5px;
	white-space: nowrap;
	background: #98E;
}
td.minimal, th.minimal {
	width: 1%;
	white-space: nowrap;
}
div.top_notice {
	text-align: center;
	margin: 48px auto 1em;
}
.public_ban {
	display: block;
	color: red;
	font-weight: bold;
	margin-top: 15px;
}
.toolong {
	display: block;
	margin-top: 15px;
}
div.blotter {
	color: red;
	font-weight: bold;
	text-align: center;
}
table.mod.config-editor {
	font-size: 9pt;
	width: 100%;
}
table.mod.config-editor td {
	text-align: left;
	padding: 5px;
	border-bottom: 1px solid #98e;
}
table.mod.config-editor input[type="text"] {
	width: 98%;
}
.homepage header h1 {
	font-size: 40pt;
	text-shadow: 0 0 0.25em rgb(136,136,136);
}
.homepage header .subtitle {
	font-size: 16pt;
}
.homeblock {
	margin: 1em auto;
	font-size: 110%;
	width: 75%;
	min-width: 300px;
	border: 1px solid rgb(160,160,160);
	padding: 1em;
	border-radius: 3px;
	-moz-border-radius: 3px;
}
.mainhomeblock {
	font-size: 130%;
}
.mainhomeblock sup {
	font-size: 0.6em;
}
/* ... */

